--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       @font-face {
         font-family: "whz-zhong-hang-shu";
-        src: url("whz-zhong-hang-shu.ttf") format("truetype");
+        src: url("whz-zhong-hang-shu.TTF") format("truetype");
       }
 
       body {
