--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         src: url("whz-zhong-hang-shu.TTF") format("truetype");
       }
 
+      @font-face {
+        font-family: "kaiu";
+        src: url("kaiu.ttf") format("truetype");
+      }
+
       body {
         background-color: #0a192f;
         color: #64c4ff;
@@ -252,6 +257,7 @@
             <option value="ThePeak">隨𡶶體</option>
             <option value="HanyiSentyPine">漢儀新蒂青松小楷</option>
             <option value="whz-zhong-hang-shu">王漢宗中行書體</option>
+            <option value="kaiu">標楷體</option>
           </select>
         </label>
       </div>
