feat: oracle font

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         src: url("kaiu.ttf") format("truetype");
       }
 
+      @font-face {
+        font-family: "oracle";
+        src: url("OracleFont.ttf") format("truetype");
+      }
+
       body {
         background-color: #0a192f;
         color: #64c4ff;
@@ -258,6 +263,7 @@
             <option value="HanyiSentyPine">漢儀新蒂青松小楷</option>
             <option value="whz-zhong-hang-shu">王漢宗中行書體</option>
             <option value="kaiu">標楷體</option>
+            <option value="oracle">甲骨文</option>
           </select>
         </label>
       </div>
