--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   </head>
   <body>
     <div class="control-form">
-      <h1>科技文字轉換器</h1>
+      <h1>文字轉換器</h1>
       <textarea
         id="input-text"
         rows="10"
