--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
         font-family: "JiaGu";
         src: url("JiaGuWen.ttf") format("truetype");
       }
+      
+      @font-face {
+        font-family: "ChenYuluoyan";
+        src: url("ChenYuluoyan.ttf") format("truetype");
+      }
 
       body {
         background-color: #0a192f;
@@ -288,6 +293,7 @@
             <option value="gothic-bl">黑薔薇哥德 (黑體)</option>
             <option value="ThenKhung">宇文天穹</option>
             <option value="JiaGu">方正甲骨文</option>
+            <option value="ChenYuluoyan">辰宇落雁体</option>
           </select>
         </label>
       </div>
